--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,5 @@
 <h2><% title(@project.name, "Projects") %></h2>
 
 <%= link_to "Edit Project", edit_project_path(@project) %>
+
+<%= link_to "Delete Project", @project, :method => :delete, :confirm => "Are you sure you want to delete this project?" %>
